--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="/index.css"> -->
     <link rel="stylesheet" href="./index.css" />
-    <title>document</title>
+    <title>Food - All you need</title>
 </head>
 <body>
 <div id="root"> </div>
