--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="/index.css"> -->
     <link rel="stylesheet" href="./index.css" />
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <title>Food - All you need</title>
 </head>
 <body>
